# x-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.tasks/: TODO.md  backlog.md
.tasks/notes/: 2026-02-13-testing-checklist.md  2026-02-14-testing-checklist.md
src/xcli/: __init__.py  cli.py
src/xcli/cmd/: __init__.py  auth.py  bookmarks.py  compose.py  posts.py  publish.py  timeline.py
src/xcli/core/: __init__.py  config.py  errors.py  markdown.py  output.py  posting.py  session.py  text_input.py  token_store.py  x_auth.py  x_client.py
tests/: test_bookmarks.py  test_posting.py  test_posts.py  test_text_input.py  test_token_store.py  test_x_auth.py  test_x_client.py  test_x_client_bookmarks.py
